Increase ff count; -6
Monotone-Parent: 896727d37b5b44ba23b0ad60c2814755b1df31e7
Monotone-Revision: 8c4505cd22467570d0bcea805055d9a1f3c5edf5

Monotone-Author: zzz@mail.i2p
Monotone-Date: 2010-01-21T14:22:32
Monotone-Branch: i2p.i2p

--- a/history.txt
+++ b/history.txt
@@ -1,3 +1,14 @@
+2010-01-21 zzz
+    * eepget.bat: Add to pkg
+    * Floodfills: Increase max to 15 (was 9) and min to 10 (was 4)
+    * I2PTunnelServer: Fix bug preventing connection retries
+      at startup from working
+    * Logs: Don't be quite so noisy in the wrapper log if we
+      can't open the router log
+    * Properties: Don't play games with \r and \n on load/save,
+      it was causing fatal issues on DOS if your username started
+      with r or n
+
 2010-01-19 sponge
     * Firewall fix for NTCP, where firewalls will forget a NAT relationship
       on a stream... AKA setting keepalive. This should fix the stuck NTCP
