--- a/history.txt
+++ b/history.txt
@@ -1,3 +1,5 @@
+* 2010-01-22  0.7.10 released
+
 2010-01-21 zzz
     * eepget.bat: Add to pkg
     * Floodfills: Increase max to 15 (was 9) and min to 10 (was 4)
