--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,8 @@
+i2p (0.7.10-0) testing; urgency=low
+  * tweaks
+    um...
+ -- zzz <nobody@nowhere.invalid>  Wed, 31 Jan 2010 17:14:57 +0000
+
 i2p (0.7-0) testing; urgency=low
   * just setting this debian thing up
     um...
