* I2NP: Various cleanup and bulletproofing
Monotone-Parent: 90ffe129f1c312fc9ecff7ea478b92e26f98fb88
Monotone-Revision: 304cfedcc0d82979b11eb5f6578b103cf66f906a

Monotone-Author: zzz@mail.i2p
Monotone-Date: 2010-01-26T19:59:39
Monotone-Branch: i2p.i2p

--- a/history.txt
+++ b/history.txt
@@ -1,3 +1,14 @@
+2010-01-28 zzz
+    * Clock: Don't refuse to update because of peer skew the first time
+    * I2NP: Various cleanup and bulletproofing
+    * Log: Try to avoid complaints at shutdown
+    * Profiles: Fix lack of profiles at router startup, especially for new routers
+    * stats.jsp: Shrink the dropdown box
+
+2010-01-26 zzz
+    * build.xml: Speed up distclean additions
+    * Debian: Fixup, update, enhance scripts
+
 2010-01-24 zzz
     * ProfileOrganizerRenderer: Cleanups
     * Reseed: Update welt's reseed hostname
