--- a/apps/i2psnark/locale/messages_zh.po
+++ b/apps/i2psnark/locale/messages_zh.po
@@ -8,8 +8,8 @@ msgid ""
 msgstr ""
 "Project-Id-Version: I2P i2psnark\n"
 "Report-Msgid-Bugs-To: \n"
-"POT-Creation-Date: 2009-12-18 06:45+0000\n"
-"PO-Revision-Date: 2009-12-27 10:47+0800\n"
+"POT-Creation-Date: 2010-01-29 07:17+0000\n"
+"PO-Revision-Date: 2010-01-29 15:30+0800\n"
 "Last-Translator: walking <zhazhenzhong@gmail.com>\n"
 "Language-Team: foo <foo@bar>\n"
 "MIME-Version: 1.0\n"
@@ -141,8 +141,8 @@ msgstr "\"{0}\" ({1}) 含有太多文件，删除之!"
 
 #: ../java/src/org/klomp/snark/SnarkManager.java:564
 #, java-format
-msgid "Torrent file \"{0}\" cannot end in '.torrent', deleting it!"
-msgstr "种子文件 \"{0}\" 不以 \".torrent\"结尾，删除之！"
+msgid "Torrent file \"{0}\" cannot end in \".torrent\", deleting it!"
+msgstr "种子文件 \"{0}\" 不以 \".torrent\"结尾，正在删除！"
 
 #: ../java/src/org/klomp/snark/SnarkManager.java:566
 #, java-format
