Fix NPE in TCPtoI2P when a lookup fails, report the error to the stream. Fix setkeys bug in DoCMDS, forgot to create the object before calling t's methods, which threw an NPE.
Monotone-Parent: 948238e73c1a5168860432e81cce95263b502546
Monotone-Revision: caf6a01f1fc82e5e8ac76e2a5f431b68bc1adaa8

Monotone-Author: sponge@mail.i2p
Monotone-Date: 2010-01-30T05:26:30
Monotone-Branch: i2p.i2p

--- a/history.txt
+++ b/history.txt
@@ -1,3 +1,8 @@
+2010-01-30 sponge
+    * Fix NPE in TCPtoI2P when a lookup fails, report the error to the stream.
+    * Fix setkeys bug in DoCMDS, forgot to create the object before calling
+      it's methods, which threw an NPE.
+
 2010-01-29 zzz
     * build.xml: Add a debian-source target
     * Data structures:
