* NetDb: Lower min RouterInfo expiration to 2.5h (was 3h)     * i2psnark debug logging tweak
Monotone-Parent: c1aec417f2f0ac77276b48a294e33c672e2062e2
Monotone-Revision: 66f95b7d190068d1b8ed0e75772551859d82dde4

Monotone-Author: zzz@mail.i2p
Monotone-Date: 2010-02-03T14:21:55
Monotone-Branch: i2p.i2p

--- a/history.txt
+++ b/history.txt
@@ -1,3 +1,10 @@
+2010-02-03 zzz
+    * Console:
+      - Hide update buttons and update config if install dir is readonly or if configured
+      - Show yellow star if no outbound tunnels
+    * i2psnark: Don't prefer to opportunistically unchoke unchoking peers when not interested
+    * NetDb: Lower min RouterInfo expiration to 2.5h (was 3h)
+
 2010-01-31 zzz
     * i2psnark standalone: Fix CSS
     * Jetty: Update to 5.1.15 to get ResourceHandler fix
