fix sending of stopped events to the tracker
Monotone-Parent: 66f95b7d190068d1b8ed0e75772551859d82dde4
Monotone-Revision: d84bac5f340fb1f9f4826a3326847a84cf32b1a1

Monotone-Author: zzz@mail.i2p
Monotone-Date: 2010-02-04T14:47:15
Monotone-Branch: i2p.i2p

--- a/history.txt
+++ b/history.txt
@@ -1,3 +1,6 @@
+2010-02-04 zzz
+    * i2psnark: Fix sending stopped events to the tracker
+
 2010-02-03 zzz
     * Console:
       - Hide update buttons and update config if install dir is readonly or if configured
