--- a/history.txt
+++ b/history.txt
@@ -1,3 +1,9 @@
+2010-02-06 zzz
+    * Console: Fix saving update keys, was broken in 0.7.10
+    * i2psnark: Add transmission ID
+    * news.xml: Wrap i2p version tags in XML comment
+    * Transport: Try yet again to prevent two NTCP pumpers
+
 2010-02-04 zzz
     * i2psnark: Fix sending stopped events to the tracker
 
