* I2PTunnelRunner: Flush initial data, for some reason it wasn't       getting flushed ever in some cases.
Monotone-Parent: 59e8e9a6621993b1672a95bb80b7038956dd8f16
Monotone-Revision: b4afc02ff8ecaf95f621169763cfa99e3f309102

Monotone-Author: zzz@mail.i2p
Monotone-Date: 2010-02-10T20:17:31
Monotone-Branch: i2p.i2p

--- a/history.txt
+++ b/history.txt
@@ -1,4 +1,8 @@
 2010-02-10 zzz
+    * I2PTunnelRunner: Flush initial data, for some reason it wasn't
+      getting flushed ever in some cases.
+
+2010-02-10 zzz
     64-bit windows installer fixes. Still no 64-bit wrapper.
     Thanks eche|on for testing!
     * Izpack:
