org.mortbay.jetty.Server modified method to accept Attributes for batch webapp launches via addWebApplications().
Monotone-Parent: 745867feedf660f2a8d57886355fc5d154358230
Monotone-Revision: ffbd6f2e9abc5bb15459760259fe6ecca73aa513

Monotone-Author: sponge@mail.i2p
Monotone-Date: 2010-02-12T22:15:59
Monotone-Branch: i2p.i2p

--- a/history.txt
+++ b/history.txt
@@ -1,3 +1,7 @@
+2010-02-12 sponge
+    * org.mortbay.jetty.Server modified method to accept attributes for
+      batch webapp launches via addWebApplications.
+
 2010-02-10 zzz
     * I2PTunnelRunner: Flush initial data, for some reason it wasn't
       getting flushed ever in some cases.
