* Floodfills: Increase max to 28 (was 15) and min to 20 (was 10)
Monotone-Parent: 70f3950e17ca1c4cf44bc2564b982107848f474d
Monotone-Revision: dae601d64fdbe53e01e3c81cdd7e16b2bc05fcdb

Monotone-Author: zzz@mail.i2p
Monotone-Date: 2010-02-13T12:02:33
Monotone-Branch: i2p.i2p

--- a/history.txt
+++ b/history.txt
@@ -1,3 +1,6 @@
+2010-02-13 zzz
+    * Floodfills: Increase max to 28 (was 15) and min to 20 (was 10)
+
 2010-02-12 sponge
     * org.mortbay.jetty.Server modified method to accept attributes for
       batch webapp launches via addWebApplications.
