Fix addWebApplications API goofup, Bump BOB version, which I forgot to do.
Monotone-Parent: dae601d64fdbe53e01e3c81cdd7e16b2bc05fcdb
Monotone-Revision: 7fe06aa67244908d00cbc2b9e858262c35db7036

Monotone-Author: sponge@mail.i2p
Monotone-Date: 2010-02-13T13:46:10
Monotone-Branch: i2p.i2p

--- a/history.txt
+++ b/history.txt
@@ -1,3 +1,7 @@
+2010-02-13 sponge
+    * Fix addWebApplications API goofup
+    * Bump BOB version, which I forgot to do.
+
 2010-02-13 zzz
     * Floodfills: Increase max to 28 (was 15) and min to 20 (was 10)
 
