--- a/history.txt
+++ b/history.txt
@@ -1,3 +1,16 @@
+2010-02-18 zzz
+    * Clock: Slew tweak
+    * i2psnark: Improve error message when finding HTML
+    * HTTP Proxy: Fix blank page instead of error page for eepsite unreachable
+    * Plugins:
+      - Fix plugin start button
+      - Change signer prop to match docs
+      - Tweaks
+    * Transport:
+      - Fix recognition of IP change when not firewalled
+      - Require consecutive identical results from two peers before changing IP
+    * TrustedUpdate: CLI exits 1 on failure for ease of use in scripts
+
 2010-02-15 zzz
     Propagate from 3 dev branches.
 
@@ -17,7 +30,8 @@
     * Streaming: MessageOutputStream logging tweaks
     * Transport:
       - Prepare for using address costs
-      - Adjust bids based on address cost, disabled until 0.7.12
+      - Adjust bids based on address cost
+      - Increase cost if near transport capacity, disabled until 0.7.12
       - Clear the geoip negative cache periodically
 
     i2p.i2p.zzz.plugin:
@@ -61,7 +75,7 @@
       - Save expired tunnel build configs for a while, so that we will still use the tunnel
         and update peer stats if the reply comes in late
       - Don't update our own profile for Tunnel Build Replies
-      - VTBM generation only through routers >= 0.1.12
+      - VTBM generation only through routers >= 0.7.12
       - VTBM generation disabled for now
 
 * 2010-02-15  0.7.11 released
