unhide plugins, fix d/l status display
Monotone-Parent: 42f25e983a609fca9a07d3c1ad830f2849443042
Monotone-Revision: 6d51859795f94e11b383e4a94a40b04dc3741fce

Monotone-Author: zzz@mail.i2p
Monotone-Date: 2010-02-19T14:42:43
Monotone-Branch: i2p.i2p

--- a/history.txt
+++ b/history.txt
@@ -1,3 +1,9 @@
+2010-02-19 zzz
+    * i2psnark: Make file box bigger
+    * Plugins:
+      - Fix display of download status
+      - Unhide
+
 2010-02-18 zzz
     * Clock: Slew tweak
     * i2psnark: Improve error message when finding HTML
