* configclients.jsp:       - Add js delete confirm       - Remove delete button for webapps     * i2psnark:       - Ignore a non-i2p tracker in a torrent rather than deleting         the torrent, thus "converting" a torrent to in-netowrk use         via the open trackers       - Add js delete confirm
Monotone-Parent: 6d51859795f94e11b383e4a94a40b04dc3741fce
Monotone-Revision: 9b5fef26ef0d755230bb967f585e245f5e1172dd

Monotone-Author: zzz@mail.i2p
Monotone-Date: 2010-02-22T18:17:11
Monotone-Branch: i2p.i2p

--- a/history.txt
+++ b/history.txt
@@ -1,3 +1,13 @@
+2010-02-22 zzz
+    * configclients.jsp:
+      - Add js delete confirm
+      - Remove delete button for webapps
+    * i2psnark:
+      - Ignore a non-i2p tracker in a torrent rather than deleting
+        the torrent, thus "converting" a torrent to in-netowrk use
+        via the open trackers
+      - Add js delete confirm
+
 2010-02-19 zzz
     * i2psnark: Make file box bigger
     * Plugins:
