--- a/history.txt
+++ b/history.txt
@@ -1,3 +1,9 @@
+2010-02-23 zzz
+    * Unzip: Any files in the zip with a .jar.pack or .war.pack extension
+      will be transparently unpacked with unpack200. Savings is about 60%.
+      Someday we will do this for suds, but we can do it for xpi2ps now.
+    * build: Add updater200 target
+
 2010-02-22 zzz
     * configclients.jsp:
       - Add js delete confirm
