* Console:       - Add link to jobs.jsp on configservice.jsp       - Add plugin disableStop support
Monotone-Parent: 5986574576b246bb52090f0319a743034bb9575a
Monotone-Revision: f5d387c0894a31c62fb5a74d43bc027d58b26e51

Monotone-Author: zzz@mail.i2p
Monotone-Date: 2010-03-02T22:54:32
Monotone-Branch: i2p.i2p

--- a/history.txt
+++ b/history.txt
@@ -1,3 +1,15 @@
+2010-03-02 zzz
+    * Console:
+      - Add link to jobs.jsp on configservice.jsp
+      - Add plugin disableStop support
+    * Context: Add boolean getProperty methods
+    * HTTP Proxy:
+      - Fix address helper conflicts caused by last checkin
+      - Use B32 instead of random hostname for conflict link
+    * LoadClientAppsJob:
+      - Fix unquoted arg after quoted arg
+      - Logging cleanup
+
 2010-02-27 zzz
     * eepsite: Add some help to index.html
     * HTTP Proxy:
