* I2PSOCKSIRCTunnel:       - New, for filtering IRC client traffic when using SOCKS     * I2PTunnelIRCClient:       - Make filter classes static and public for use by SOCKS       - Eliminate redundant case conversion       - Pass ISON message through (jIRCii uses it for pings)       - Switch back to StringBuffer since it's used by 2 threads       - Set daemon on filter threads     * SOCKS5Server:       - Fix handling of multiple authentication methods
Monotone-Parent: 4bac96626432ea12afa2ae31b3551f9d5e1d7fb4
Monotone-Revision: 7d41dc476a345f8a05ba0885c9bf9fee7d5217c8

Monotone-Author: zzz@mail.i2p
Monotone-Date: 2010-03-05T14:04:32
Monotone-Branch: i2p.i2p

--- a/history.txt
+++ b/history.txt
@@ -1,3 +1,15 @@
+2010-03-05 zzz
+    * I2PSOCKSIRCTunnel:
+      - New, for filtering IRC client traffic when using SOCKS
+    * I2PTunnelIRCClient:
+      - Make filter classes static and public for use by SOCKS
+      - Eliminate redundant case conversion
+      - Pass ISON message through (jIRCii uses it for pings)
+      - Switch back to StringBuffer since it's used by 2 threads
+      - Set daemon on filter threads
+    * SOCKS5Server:
+      - Fix handling of multiple authentication methods
+
 2010-03-02 zzz
     * Console:
       - Add link to jobs.jsp on configservice.jsp
