--- a/apps/i2ptunnel/locale/messages_zh.po
+++ b/apps/i2ptunnel/locale/messages_zh.po
@@ -8,7 +8,7 @@ msgid ""
 msgstr ""
 "Project-Id-Version: I2P i2ptunnel\n"
 "Report-Msgid-Bugs-To: \n"
-"POT-Creation-Date: 2010-01-29 07:17+0000\n"
+"POT-Creation-Date: 2010-03-05 12:41+0000\n"
 "PO-Revision-Date: 2010-01-29 15:31+0800\n"
 "Last-Translator: walking <zhazhenzhong@gmail.com>\n"
 "Language-Team: foo <foo@bar>\n"
@@ -17,14 +17,23 @@ msgstr ""
 "Content-Transfer-Encoding: 8bit\n"
 "X-Poedit-Language: Chinese\n"
 
-#: ../java/src/net/i2p/i2ptunnel/I2PTunnelHTTPClient.java:436
-#, java-format
-msgid "To visit the destination in your host database, click <a href=\"{0}\">here</a>. To visit the conflicting addresshelper link by temporarily giving it a random alias, click <a href=\"{1}\">here</a>."
-msgstr "要访问您本地【地址簿】中规定的主机(相当与IP)，请点击<a href=\"{0}\">这里</a>。要访问【地址助手】返回的主机请点<a href=\"{1}\">这里</a>(主机的域名会被临时强制替换)。"
+#: ../java/src/net/i2p/i2ptunnel/I2PTunnelHTTPClient.java:483
+#, fuzzy, java-format
+msgid ""
+"To visit the destination in your host database, click <a href=\"{0}\">here</"
+"a>. To visit the conflicting addresshelper destination, click <a href=\"{1}"
+"\">here</a>."
+msgstr ""
+"要访问您本地【地址簿】中规定的主机(相当与IP)，请点击<a href=\"{0}\">这里</"
+"a>。要访问【地址助手】返回的主机请点<a href=\"{1}\">这里</a>(主机的域名会被临"
+"时强制替换)。"
 
-#: ../java/src/net/i2p/i2ptunnel/I2PTunnelHTTPClient.java:802
-msgid "Click a link below to look for an address helper by using a \"jump\" service:"
-msgstr "请点击下面的链接通过【跳转(Jump)】服务提供的【地址助手】链接跳转至域名对应的主机："
+#: ../java/src/net/i2p/i2ptunnel/I2PTunnelHTTPClient.java:886
+msgid ""
+"Click a link below to look for an address helper by using a \"jump\" service:"
+msgstr ""
+"请点击下面的链接通过【跳转(Jump)】服务提供的【地址助手】链接跳转至域名对应的"
+"主机："
 
 #: ../java/src/net/i2p/i2ptunnel/web/IndexBean.java:362
 msgid "New Tunnel"
@@ -195,7 +204,9 @@ msgid "Shared Client"
 msgstr "共享客户端"
 
 #: ../jsp/WEB-INF/classes/net/i2p/i2ptunnel/jsp/editClient_jsp.java:243
-msgid "(Share tunnels with other clients and irc/httpclients? Change requires restart of client proxy)"
+msgid ""
+"(Share tunnels with other clients and irc/httpclients? Change requires "
+"restart of client proxy)"
 msgstr "(与其他客户端例如IRC/HTTP共享隧道？修改需要重新启动)"
 
 #: ../jsp/WEB-INF/classes/net/i2p/i2ptunnel/jsp/editClient_jsp.java:247
@@ -214,8 +225,12 @@ msgid "Advanced networking options"
 msgstr "高级网络设置"
 
 #: ../jsp/WEB-INF/classes/net/i2p/i2ptunnel/jsp/editClient_jsp.java:255
-msgid "(NOTE: when this client proxy is configured to share tunnels, then these options are for all the shared proxy clients!)"
-msgstr "(注意:此客户代理被设置使用共享隧道时，这些设置将影响所有使用共享隧道的客户端!)"
+msgid ""
+"(NOTE: when this client proxy is configured to share tunnels, then these "
+"options are for all the shared proxy clients!)"
+msgstr ""
+"(注意:此客户代理被设置使用共享隧道时，这些设置将影响所有使用共享隧道的客户"
+"端!)"
 
 #: ../jsp/WEB-INF/classes/net/i2p/i2ptunnel/jsp/editClient_jsp.java:257
 #: ../jsp/WEB-INF/classes/net/i2p/i2ptunnel/jsp/editServer_jsp.java:268
@@ -264,12 +279,14 @@ msgstr "隧道长度恒定(随机性无,性能稳定)"
 
 #: ../jsp/WEB-INF/classes/net/i2p/i2ptunnel/jsp/editClient_jsp.java:303
 #: ../jsp/WEB-INF/classes/net/i2p/i2ptunnel/jsp/editServer_jsp.java:314
-msgid "+ 0-1 hop variance (medium additive randomisation, subtractive performance)"
+msgid ""
+"+ 0-1 hop variance (medium additive randomisation, subtractive performance)"
 msgstr "隧道长度+ 0-1(随机性中,影响性能)"
 
 #: ../jsp/WEB-INF/classes/net/i2p/i2ptunnel/jsp/editClient_jsp.java:307
 #: ../jsp/WEB-INF/classes/net/i2p/i2ptunnel/jsp/editServer_jsp.java:318
-msgid "+ 0-2 hop variance (high additive randomisation, subtractive performance)"
+msgid ""
+"+ 0-2 hop variance (high additive randomisation, subtractive performance)"
 msgstr "隧道长度+ 0-2(随机性高,影响性能)"
 
 #: ../jsp/WEB-INF/classes/net/i2p/i2ptunnel/jsp/editClient_jsp.java:311
@@ -299,12 +316,15 @@ msgstr "出/入站隧道x1(带宽低,低可靠性)"
 
 #: ../jsp/WEB-INF/classes/net/i2p/i2ptunnel/jsp/editClient_jsp.java:343
 #: ../jsp/WEB-INF/classes/net/i2p/i2ptunnel/jsp/editServer_jsp.java:354
-msgid "2 inbound, 2 outbound tunnels (standard bandwidth usage, standard reliability)"
+msgid ""
+"2 inbound, 2 outbound tunnels (standard bandwidth usage, standard "
+"reliability)"
 msgstr "出/入站隧道x2(带宽标准,标准稳定性)"
 
 #: ../jsp/WEB-INF/classes/net/i2p/i2ptunnel/jsp/editClient_jsp.java:347
 #: ../jsp/WEB-INF/classes/net/i2p/i2ptunnel/jsp/editServer_jsp.java:358
-msgid "3 inbound, 3 outbound tunnels (higher bandwidth usage, higher reliability)"
+msgid ""
+"3 inbound, 3 outbound tunnels (higher bandwidth usage, higher reliability)"
 msgstr "出/入站隧道x3(带宽高,高稳定性)"
 
 #: ../jsp/WEB-INF/classes/net/i2p/i2ptunnel/jsp/editClient_jsp.java:356
@@ -329,7 +349,8 @@ msgstr "备用隧道对x1 (低冗余,低资源占用)"
 
 #: ../jsp/WEB-INF/classes/net/i2p/i2ptunnel/jsp/editClient_jsp.java:376
 #: ../jsp/WEB-INF/classes/net/i2p/i2ptunnel/jsp/editServer_jsp.java:387
-msgid "2 backup tunnels each direction (medium redundancy, medium resource usage)"
+msgid ""
+"2 backup tunnels each direction (medium redundancy, medium resource usage)"
 msgstr "备用隧道对x2 (中冗余,中资源占用)"
 
 #: ../jsp/WEB-INF/classes/net/i2p/i2ptunnel/jsp/editClient_jsp.java:380
@@ -428,8 +449,12 @@ msgstr "自定义选项"
 
 #: ../jsp/WEB-INF/classes/net/i2p/i2ptunnel/jsp/editClient_jsp.java:472
 #: ../jsp/WEB-INF/classes/net/i2p/i2ptunnel/jsp/editServer_jsp.java:495
-msgid "NOTE: If tunnel is currently running, most changes will not take effect until tunnel is stopped and restarted."
-msgstr "注意：如果当前隧道已经启动，设置需要【停止】并重新【启动】相应隧道后才能生效。"
+msgid ""
+"NOTE: If tunnel is currently running, most changes will not take effect "
+"until tunnel is stopped and restarted."
+msgstr ""
+"注意：如果当前隧道已经启动，设置需要【停止】并重新【启动】相应隧道后才能生"
+"效。"
 
 #: ../jsp/WEB-INF/classes/net/i2p/i2ptunnel/jsp/editClient_jsp.java:474
 #: ../jsp/WEB-INF/classes/net/i2p/i2ptunnel/jsp/editServer_jsp.java:497
@@ -671,4 +696,3 @@ msgstr "目标"
 #: ../jsp/WEB-INF/classes/net/i2p/i2ptunnel/jsp/index_jsp.java:365
 msgid "New client tunnel"
 msgstr "新建客户隧道"
-
