tag console reseed messages
Monotone-Parent: 7d2c1989121e43c5b45a0d2140ae11986b1db4e9
Monotone-Revision: b007b21993299825bd874094a6024873fd39c334

Monotone-Author: zzz@mail.i2p
Monotone-Date: 2010-03-05T15:36:24
Monotone-Branch: i2p.i2p

--- a/history.txt
+++ b/history.txt
@@ -1,4 +1,5 @@
 2010-03-05 zzz
+    * Console: Tag reseed messages
     * I2PSOCKSIRCTunnel:
       - New, for filtering IRC client traffic when using SOCKS
     * I2PTunnelIRCClient:
