translate country names on flag popups
Monotone-Parent: b007b21993299825bd874094a6024873fd39c334
Monotone-Revision: 1d260b764d0fde4b8df67bdb23320b85e6944721

Monotone-Author: zzz@mail.i2p
Monotone-Date: 2010-03-05T15:56:17
Monotone-Branch: i2p.i2p

--- a/history.txt
+++ b/history.txt
@@ -1,5 +1,7 @@
 2010-03-05 zzz
-    * Console: Tag reseed messages
+    * Console:
+      - Tag reseed messages
+      - Translate country names on flag popups
     * I2PSOCKSIRCTunnel:
       - New, for filtering IRC client traffic when using SOCKS
     * I2PTunnelIRCClient:
