* Random: Remove and deprecate some old classses
Monotone-Parent: d2db63b22e5be25c8bc08545b1d7566ef6d47ed5
Monotone-Revision: de16a3fc83df59cf32a3cb4589b8ff5c51860c3b

Monotone-Author: zzz@mail.i2p
Monotone-Date: 2010-03-08T00:48:56
Monotone-Branch: i2p.i2p

--- a/history.txt
+++ b/history.txt
@@ -1,3 +1,10 @@
+2010-03-08 zzz
+    * Floodfills: Increase max to 60 (was 28) and min to 45 (was 20)
+    * i2psnark: Better track outgoing bandwidth by incrementing
+      counter before the blocking write
+    * Random: Remove and deprecate some old classses
+    * Reseeder: Reduce max response size to 1MB (was 8MB)
+
 2010-03-05 zzz
     * Console:
       - Tag reseed messages
